Actions
Bug #3989
closedsvc.startd gets stuck in a loop when HOME dir doesn't exist
Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
cmd - userland programs
Start date:
2013-08-04
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
I saw this first accidentally when I was trying to fix a problem with my rabbit zone. Then I was able to reproduce it easily.
To reproduce:
go into your rabbitmq zone
svcadm disable rabbitmq
mv /var/db/rabbitmq /var/db/rabbitmq.bak
svcadm enable rabbitmq
What I see is:
[ Jun 13 22:11:58 Executing start method ("/opt/local/sbin/rabbitmq-server"). ] [ Jun 13 22:11:58 svc.startd could not set context for method: ] chdir: No such file or directory [ Jun 13 22:11:58 Stopping because all processes in service exited. ] [ Jun 13 22:11:58 Executing start method ("/opt/local/sbin/rabbitmq-server"). ] [ Jun 13 22:11:58 svc.startd could not set context for method: ] chdir: No such file or directory [ Jun 13 22:11:58 Stopping because all processes in service exited. ] [ Jun 13 22:11:58 Executing start method ("/opt/local/sbin/rabbitmq-server"). ] [ Jun 13 22:11:58 svc.startd could not set context for method: ] chdir: No such file or directory [ Jun 13 22:11:58 Stopping because all processes in service exited. ] [ Jun 13 22:11:58 Executing start method ("/opt/local/sbin/rabbitmq-server"). ] [ Jun 13 22:11:58 svc.startd could not set context for method: ] chdir: No such file or directory [ Jun 13 22:11:58 Stopping because all processes in service exited. ] ...
looping on my box about 39-40 times per second. I've left it now for over an hour and it doesn't appear that it plans to stop until the service's log fills up the disk.
Updated by Robert Mustacchi almost 9 years ago
- Status changed from New to Resolved
Resolved in 2a17138d7a5102bc6e0bf0444224cd0c416d98f0.
Actions