3989 svc.startd gets stuck in a loop when HOME dir doesn't exist 3990 a misconfigured smf service can cause svc.configd to leak memory and eventually hang 3991 startd, configd spinning due to bad sac start method Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>